--- a/src/app/pages/article/article.hbs
+++ b/src/app/pages/article/article.hbs
@@ -8,7 +8,7 @@
         <div class="meta">
             <p><a href="/author" class="author" data-id="author"></a>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
         </div>
-        <div class="body" data-id="body"></div>
+        <div class="body"></div>
         <div class="tags" data-id="tags"></div>
         <div id="disqus_thread" class="disqus"></div>
     </div>
