--- a/src/app/pages/blog/pinned-article/pinned-article.hbs
+++ b/src/app/pages/blog/pinned-article/pinned-article.hbs
@@ -1,10 +1,10 @@
 <div class="img"></div>
 <div class="content">
-    <h2><a href="/blog/{{articleSlug}}" data-id="title"></a></h2>
-    <h3 data-id="subheading"></h3>
-    <div class="body" data-id="body"></div>
+    <h2><a href="/blog/{{articleSlug}}">{{title}}</a></h2>
+    <h3>{{subheading}}</h3>
+    <div class="body"></div>
 
     <div class="meta">
-        <p><a href="/author" class="author" data-id="author"></a>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
+        <p><a href="/author" class="author">{{author}}</a>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
     </div>
 </div>
