--- a/src/app/pages/article/article.scss
+++ b/src/app/pages/article/article.scss
@@ -2,6 +2,8 @@
 @import 'mixins';
 
 .article.page {
+    $boxed-width: 730px;
+
     @mixin tablet {
         @media (min-width: #{breakpoints(phone) + 1}) {
             @content;
@@ -26,7 +28,8 @@
         }
     }
 
-    .boxed {
+    > .boxed {
+        max-width: $boxed-width;
         padding: 2rem 1.5rem 8rem;
     }
 
@@ -46,6 +49,65 @@
         img {
             width: 100%;
             margin: 1.5rem 0 0;
+        }
+
+        .image {
+            margin-top: 2.5rem;
+
+            + .quote blockquote {
+                color: color(gray);
+                font-size: 1.4rem;
+                margin: 0;
+
+                p {
+                    margin: 0;
+                }
+            }
+        }
+
+        .quote-bucket.undefined blockquote {
+            font-size: 3.6rem;
+            margin: 2.5rem 0;
+            padding: 2.5rem 0;
+            position: relative;
+            line-height: 4.8rem;
+            font-weight: 500;
+            font-style: italic;
+
+            &::before {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 0.4rem;
+                background-color: color(neutral-lighter);
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+            }
+
+            &::after {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 0.4rem;
+                background-color: color(neutral-lighter);
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+            }
+
+            .attribution {
+                font-size: 2.4rem;
+                text-align: right;
+                font-weight: 400;
+            }
+        }
+
+        iframe {
+            width: 100%;
+            margin: 3rem 0;
         }
     }
 
