remove blog search & heading field

--- a/src/app/pages/blog/article/article.hbs
+++ b/src/app/pages/blog/article/article.hbs
@@ -3,6 +3,6 @@
     <h2><a href="/blog/{{articleSlug}}">{{title}}</a></h2>
     <div class="body"></div>
     <div class="meta">
-        <p><a href="/author" class="author">{{author}}</a>  &nbsp;|&nbsp;  <span class="date">{{date}}</span></p>
+        <p><span class="author">{{author}}</span>  &nbsp;|&nbsp;  <span class="date">{{date}}</span></p>
     </div>
 </div>
