--- a/src/app/pages/article/article.hbs
+++ b/src/app/pages/article/article.hbs
@@ -6,7 +6,7 @@
         <h1 data-id="title"></h1>
         <h2 data-id="subheading"></h2>
         <div class="meta">
-            <p><a href="/author" class="author" data-id="author"></a>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
+            <p><span class="author" data-id="author"></span>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
         </div>
         <div class="body"></div>
         <div class="tags" data-id="tags"></div>
