--- a/src/app/pages/blog/pinned-article/pinned-article.hbs
+++ b/src/app/pages/blog/pinned-article/pinned-article.hbs
@@ -5,6 +5,6 @@
     <div class="body"></div>
 
     <div class="meta">
-        <p><a href="/author" class="author">{{author}}</a>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
+        <p><span class="author">{{author}}</span>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
     </div>
 </div>
