--- a/src/app/pages/mass-renewal/mass-renewal.hbs
+++ b/src/app/pages/mass-renewal/mass-renewal.hbs
@@ -79,17 +79,9 @@
             <label>Which partner resources are you using with your book?
                 <select multiple name="00NU0000005VmTu">
                      <option value="None" disabled selected>None</option>
-                     <option value="Cerego">Cerego</option>
-                     <option value="Courseweaver">Courseweaver</option>
-                     <option value="eMath">eMath</option>
-                     <option value="Expert TA">Expert TA</option>
-                     <option value="Lrnr">Lrnr</option>
-                     <option value="panOpen">panOpen</option>
-                     <option value="Sapling Learning">Sapling Learning</option>
-                     <option value="SimBio">SimBio</option>
-                     <option value="WebAssign">WebAssign</option>
-                     <option value="Wiley Plus">Wiley Plus</option>
-                     <option value="XYZ Homework">XYZ Homework</option>
+                     {{#each partners}}
+                        <option value="{{this}}">{{this}}</option>
+                     {{/each}}
                      <option value="" data-other="other-partner">Other (specify below)</option>
                 </select>
             </label>
