--- a/src/app/pages/details/resource/resource.hbs
+++ b/src/app/pages/details/resource/resource.hbs
@@ -1,4 +1,5 @@
 <h4>{{resource_heading}}</h4>
+{{#if resource_description}}{{{resource_description}}}{{/if}}
 <span class="link-and-lock">
 <a href="{{linkUrl}}">{{link_text}}</a>
 {{#if showLock}}<i class="locked-state fa {{showLock}}"></i>{{/if}}
