Fix quote boxes to pull from CMS
On home page, continue to use default images/data
On Higher Ed, pass data from CMS to Buckets, and display it properly
Fixed bucket display issues on IE11

--- a/src/app/components/bucket/bucket.hbs
+++ b/src/app/components/bucket/bucket.hbs
@@ -1,6 +1,8 @@
 {{#if hasImage}}<div class="image"></div>{{/if}}
 <div class="quote">
-    <span class="title">{{titleText}}</span>
-    <span class="blurb">{{{blurbHtml}}}</span>
+    <div>
+        <span class="title">{{titleText}}</span>
+        <span class="blurb">{{{blurbHtml}}}</span>
+    </div>
     <a class="btn {{btnClass}}" href="{{linkUrl}}">{{linkText}}</a>
 </div>
