--- a/src/app/pages/about-us/about-us.hbs
+++ b/src/app/pages/about-us/about-us.hbs
@@ -10,7 +10,7 @@
                 textbook was published in 2012 and has since scaled to more than 20 books used by
                 hundreds of thousands of students across the globe. Our adaptive learning
                 technology, designed to improve learning outcomes through personalized
-                educational paths, are currently being piloted for K-12 and college.
+                educational paths, is currently being piloted for K-12 and college.
                 The OpenStax mission is made possible through the generous support of
                 philanthropic foundations. Through these partnerships and our alliance
                 with other educational resource companies, OpenStax is breaking down the
