--- a/src/app/pages/details/author/author.hbs
+++ b/src/app/pages/details/author/author.hbs
@@ -1,1 +1,1 @@
-<div class="top-author">{{name}}, {{university}}</div>
+<div class="top-author">{{name}}{{#if university}}, {{university}}{{/if}}</div>
