--- a/src/app/components/buckets/buckets.scss
+++ b/src/app/components/buckets/buckets.scss
@@ -11,7 +11,6 @@
     .bucket {
         color: color(neutral-lightest);
         max-width: 100%;
-        min-height: 30rem;
 
         @include collapsed {
             flex-direction: column;
@@ -19,41 +18,6 @@
 
         &:last-child {
             margin-bottom: 0;
-        }
-
-        &.give {
-            background-color: color(green);
-
-            > .image {
-                background-image: url('/images/home/buckets/give.jpg');
-                background-position: center center;
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-
-            > .quote {
-                &::before {
-                    @include triangle(
-                        $direction: left,
-                        $position: top 27% left -2.4rem,
-                        $color: color(green),
-                        $size: 2.4rem
-                    );
-
-                    @include collapsed {
-                        @include triangle(
-                            $direction: top,
-                            $position: top -2.4rem right 5rem left auto,
-                            $color: color(green),
-                            $size: 2.4rem
-                        );
-                    }
-                }
-
-                .title {
-                    color: color(yellow);
-                }
-            }
         }
 
         &.our-impact {
@@ -64,6 +28,7 @@
                 background-position: center center;
                 background-repeat: no-repeat;
                 background-size: cover;
+                min-height: 30rem;
             }
 
             > .quote {
@@ -96,6 +61,32 @@
             background-image: url('/images/home/buckets/partners.jpg');
             background-repeat: no-repeat;
             background-size: cover;
+        }
+
+        .quote {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            @include collapsed {
+                min-height: 30rem;
+            }
+
+            > div {
+                max-width: 100%;
+            }
+        }
+
+        &.left .quote {
+            align-items: flex-start;
+        }
+
+        &.full .quote {
+            align-items: center;
+
+            @include collapsed {
+                align-items: flex-start;
+            }
         }
 
     }
