--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -88,7 +88,7 @@ $phone-up: #{breakpoints(phone) + 1};
                 order: 1;
                 background-position: 62%;
                 background-repeat: no-repeat;
-                background-size: contain;
+                background-size: cover;
             }
 
             > .quote {
