--- a/src/app/components/quote/quote.hbs
+++ b/src/app/components/quote/quote.hbs
@@ -1,10 +1,13 @@
 {{#if imageUrl}}<div class="image" style="background-image: url({{imageUrl}}){{#if height}}; height:{{height}}px{{/if}}"></div>{{/if}}
-<div class="quote">
+<div class="quote{{#if colorScheme}} {{colorScheme}}{{/if}}">
     <blockquote>{{{quoteHtml}}}
         {{#if attribution}}
         <div class="attribution">&mdash; {{{attribution}}}</div>
         {{/if}}
     </blockquote>
+    {{#if overlay}}
+    <img class="overlay" src="{{overlay}}" />
+    {{/if}}
     {{#if linkText}}
     <a class="btn btn-orange" href="{{linkUrl}}">{{linkText}}</a>
     {{/if}}
