--- a/src/app/pages/blog/pinned-article/pinned-article.hbs
+++ b/src/app/pages/blog/pinned-article/pinned-article.hbs
@@ -1,7 +1,7 @@
 <div class="img"></div>
 <div class="content">
     <h2><a href="/blog/{{articleSlug}}">{{title}}</a></h2>
-    <h3>{{subheading}}</h3>
+    {{#if subheading}}<h3>{{subheading}}</h3>{{/if}}
     <div class="body"></div>
 
     <div class="meta">
