Add header to Get This Title menu on Details page

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -33,10 +33,10 @@
             </section>
             <section class="floating-menu">
                 <div class="box">
-                <!-- <h3>Get this title</h3> -->
+                <h2>Get this title</h2>
                 <div class="get-this-book"></div>
                 <div class="notes">
-                    <!-- <small><sup>*</sup>Our website is Section 508 Level A accessible.</small> -->
+                    {{! <small><sup>*</sup>Our website is Section 508 Level A accessible.</small> }}
                 </div>
                 <div class="cta">
                     <p class="interested-text">
