Change iBook to Download on iBooks
Also make textarea fields wrap

--- a/src/app/components/get-this-title/get-this-title.hbs
+++ b/src/app/components/get-this-title/get-this-title.hbs
@@ -60,7 +60,7 @@
                     <div class="option">
                         <a href="{{ibookLink}}">
                             <span class="fa fa-tablet"></span>
-                            iBook
+                            Download on iBooks
                         </a>
                     </div>
                 {{/if}}
