--- a/src/app/pages/comp-copy-confirmation/comp-copy-confirmation.hbs
+++ b/src/app/pages/comp-copy-confirmation/comp-copy-confirmation.hbs
@@ -1,9 +1,9 @@
 <div class="page-intro">
     <div class="text-content subhead">
-        <h1>Thank you for requesting an iBooks comp copy.</h1>
+        <h1>Thank you for requesting a download from iBooks.</h1>
         <p>
             A member of our Customer Service team will contact you with a code for your
-            free iBooks copy within one to two business days.
+            free download from iBooks within one to two business days.
         </p>
         {{!--
         <p class="blurb-calculator">
