--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -1,8 +1,8 @@
 <div class="text-content subhead">
-    <h1>Request an iBooks Complimentary Copy</h1>
+    <h1>Request Complimentary Download from iBooks</h1>
     <p>
-        All instructors with a verified instructor account can receive an
-        iBooks comp copy of their book of choice.
+        All instructors with a verified instructor account can download a
+        complimentary copy of their book of choice from iBooks.
     </p>
     <p>
         OpenStax textbooks are free for students in web view and PDF form,
