Implement Astronomy banner

--- a/src/app/pages/home/banners/astronomy/astronomy.hbs
+++ b/src/app/pages/home/banners/astronomy/astronomy.hbs
@@ -1,30 +1,33 @@
 <div class="astronomy">
-    <div class="chart"></div>
-    <div class="equation"></div>
-    <div class="book"></div>
-    <div class="video-banner"></div>
-    <div class="square-1"></div>
-    <div class="square-2"></div>
-    <div class="square-3"></div>
-    <div class="square-4"></div>
+    <div class="container">
+        <div class="chart flyout"></div>
+        <div class="equation flyout"></div>
+        <div class="book flyout"></div>
 
-    <div class="now-i-can">
-        <span>Now I can</span>
-        <span class="quote">Dream as Far as I can see</span>
-    </div>
+        <div class="student"></div>
 
-    <div class="subject-links">
-        <ul>
-            <li>
-                <a class="btn btn-large btn-yellow explore-subject" href="/books/astronomy">
-                    Explore Astronomy
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-large btn-blue explore-all" href="/subjects">
-                    Explore All Subjects
-                </a>
-            </li>
-        </ul>
+        <div class="square-1 flyout"></div>
+        <div class="square-3 flyout"></div>
+        <div class="square-4 flyout"></div>
+
+        <div class="now-i-can flyout">
+            <span>Now I can</span>
+            <span class="quote">see beyond this world</span>
+        </div>
+
+        <div class="subject-links flyout">
+            <ul>
+                <li>
+                    <a class="btn btn-large btn-gold explore-subject" href="/details/astronomy">
+                        Explore Astronomy
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-large btn-blue explore-all" href="/subjects">
+                        Explore All Subjects
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
