Fix endorsement and resource layout issues
Remove empty sections in IE
Make resources three-to-a-row in IE

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -475,7 +475,8 @@
             }
 
             @media (min-width: 900px) {
-                flex: 0 0 31%;
+                flex: 1 0 28%;
+                max-width: 31%;
                 margin-right: 1.5rem;
             }
 
