--- a/src/app/pages/home/banners/astronomy/astronomy.scss
+++ b/src/app/pages/home/banners/astronomy/astronomy.scss
@@ -1,83 +1,58 @@
 @import 'variables';
 @import 'mixins';
 
-@mixin desktop {
-    @media (min-width: 1025px) {
-        @content;
-    }
-}
-
 @mixin tablet {
     @media (min-width: #{breakpoints(phone) + 1}) {
         @content;
     }
 }
 
-.flyin,
-.flyout {
-    @include desktop {
-        opacity: 0;
+@mixin desktop {
+    @media (min-width: 1025px) {
+        @content;
     }
 }
 
-.astronomy {
-    background-attachment: fixed;
-    background-image: url('/images/home/subjects/astronomy/background.jpg');
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60rem;
-    overflow: hidden;
-    position: relative;
+$subject: astronomy;
+
+$book-color: color(blue);
+$now-i-can-color: rgba(color(cyan), 0.85);
+$now-i-can-width: 53rem;
+$underline-width: 33rem;
+$square-color: rgba(color(blue), 0.3);
+$subject-button-color: color(gold);
+$all-subject-button-color: color(blue);
+
+.home-page .book-banners .banner.#{$subject} {
+    background-color: $book-color;
 
     @include tablet {
-        height: 65rem;
+        background-image: url("/images/home/subjects/#{$subject}/background.jpg");
     }
 
-    @include phone {
-        background-color: color(blue);
-        background-image: none;
-        height: 45rem;
+    .chart {
+        background-image: url('/images/home/subjects/astronomy/chart.png');
+        height: 19rem;
+        right: 4rem;
+        position: absolute;
+        bottom: 6rem;
+        width: 19rem;
     }
 
-    .container {
-        display: flex;
-        margin: 0 auto;
-        padding: 0 1.5rem;
-        max-width: $boxed-width;
-        flex-flow: column wrap;
-        position: relative;
-        height: 100%;
-
-        @include tablet {
-            flex-flow: row wrap;
-        }
-
-        @include desktop {
-            flex-flow: row wrap;
-        }
+    .equation {
+        background-image: url('/images/home/subjects/astronomy/equation.png');
+        height: 14rem;
+        left: 19rem;
+        position: absolute;
+        top: 19rem;
+        width: 14rem;
     }
 
     .square-1,
     .square-2,
     .square-3,
     .square-4 {
-        background-color: rgba(color(blue), 0.3);
-        display: none;
-        position: absolute;
-        z-index: 0;
-
-        @include desktop {
-            display: block;
-            animation: flyin 0.5s 1.2s 1 normal ease-in forwards, loop 30s 1.5s normal infinite linear forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
+        background-color: $square-color;
     }
 
     .square-1 {
@@ -121,61 +96,18 @@
         }
     }
 
-    .chart,
-    .equation,
-    .book {
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        z-index: 1;
-    }
-
-    .chart,
-    .equation {
-        display: none;
-
-        @include desktop {
-            display: block;
-            animation: flyin 0.5s 1.4s 1 normal ease-in forwards, loop 40s 1.8s reverse infinite linear forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
-    }
-
-    .chart {
-        background-image: url('/images/home/subjects/astronomy/chart.png');
-        height: 19rem;
-        right: 2rem;
-        position: absolute;
-        bottom: 6rem;
-        width: 27.4rem;
-    }
-
-    .equation {
-        background-image: url('/images/home/subjects/astronomy/equation.png');
-        height: 14rem;
-        left: 19rem;
-        position: absolute;
-        top: 24rem;
-        width: 14rem;
+    .element {
+        background-image: url('/images/home/subjects/#{$subject}/element.png');
+        bottom: 10rem;
+        height: 12rem;
+        right: 0;
+        width: 12rem;
     }
 
     .book {
-        background-color: color(blue);
-        background-image: url('/images/subjects/astronomy.svg');
+        background-color: $book-color;
+        background-image: url('/images/subjects/#{$subject}.svg');
         background-position: top left;
-        background-size: 100% auto;
-        height: 33rem;
-        left: 1.5rem;
-        max-width: calc(100% - 3rem);
-        position: absolute;
-        top: 1.5rem;
-        width: 33rem;
 
         @include tablet {
             top: 10vw;
@@ -195,26 +127,13 @@
             left: 37%;
             top: 10rem;
         }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
     }
 
     .student {
-        background-image: url('/images/home/subjects/astronomy/student.png');
-        background-position: center bottom;
-        background-repeat: no-repeat;
-        background-size: contain;
-        bottom: 15rem;
-        height: 55%;
-        position: absolute;
+        background-image: url('/images/home/subjects/#{$subject}/student.png');
+        background-position: 92% 100%;
         right: 1.5rem;
-        width: 32rem;
-        z-index: 2;
+        width: calc(35% + 15rem);
 
         @include tablet {
             bottom: -0.1rem;
@@ -230,136 +149,51 @@
         }
     }
 
-    .now-i-can {
-        background-color: rgba(color(cyan), 0.85);
-        color: color(neutral-lightest);
-        display: none;
-        font-size: 3rem;
-        font-weight: 600;
-        height: 8rem;
-        left: 4rem;
-        line-height: 2.5;
-        padding: 0;
-        position: absolute;
-        text-align: center;
-        text-transform: none;
-        top: 41rem;
-        width: 53rem;
-        z-index: 3;
-
-        @media (min-width:650px) {
-            display: initial;
+    .align-edge {
+        @include tablet {
+            bottom: 5.5rem;
+            left: calc(22vw - 9.1rem);
         }
 
         @include desktop {
-            animation: flyin 0.5s 1.8s 1 normal forwards;
-            font-size: 3.4rem;
-            height: 9rem;
-            left: 4rem;
-            width: 58rem;
+            left: 9rem;
         }
+    }
 
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
-
-        .quote {
-            display: inline-block;
-            font-family: 'Permanent Marker', cursive;
-            transform: rotate(-1.2deg) translate(0.8rem, -0.5rem);
-        }
+    .now-i-can {
+        background-color: $now-i-can-color;
+        color: color(neutral-lightest);
+        font-size: 3rem;
+        width: $now-i-can-width;
 
         &::after {
-            border-bottom: 0.1rem solid color(neutral-lightest);
-            content: '';
-            right: 2rem;
-            position: absolute;
-            top: 70%;
-            width: 33rem;
-
-            @include desktop {
-                right: 1rem;
-                width: 37rem;
-            }
+            width: $underline-width;
         }
     }
 
     .subject-links {
-        bottom: 1.5rem;
-        left: 0;
-        position: absolute;
-        width: 100%;
-        z-index: 3;
-
         @include tablet {
-            bottom: 6.3rem;
-            left: 2.5rem;
-            width: 27rem;
+            width: 45rem;
+        }
+    }
+
+    .explore-subject {
+        @include tablet {
+            background-color: $subject-button-color;
         }
 
-        @media (min-width: 650px) {
-            width: auto;
+        &:hover {
+            background-color: darken($subject-button-color, 5%);
+        }
+    }
+
+    .explore-all {
+        @include tablet {
+            background-color: $all-subject-button-color;
         }
 
-        @include desktop {
-            left: 15.6rem;
-            animation: flyin 0.5s 1.8s 1 normal forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
-
-        ul {
-            list-style-type: none;
-            margin: 0 1.5rem;
-            padding: 0;
-
-            li {
-                display: inline-block;
-                width: 100%;
-
-                @include tablet {
-                    width: auto;
-                }
-            }
-        }
-
-        .btn {
-            font-size: 1.6rem;
-            line-height: 6rem;
-            height: 6rem;
-            padding: 0 1.5rem;
-            width: 100%;
-            display: inline-block;
-
-            @include desktop {
-                width: auto;
-            }
-        }
-
-        .explore-subject {
-            margin-bottom: 1.5rem;
-
-            @include tablet {
-                margin-right: 1rem;
-            }
-        }
-
-        .explore-all {
-            @include phone {
-                background-color: color(orange);
-
-                &:hover {
-                    background-color: darken(color(orange), 5%);
-                }
-            }
+        &:hover {
+            background-color: darken($all-subject-button-color, 5%);
         }
     }
 }
