--- a/src/app/pages/home/banners/us-history/us-history.scss
+++ b/src/app/pages/home/banners/us-history/us-history.scss
@@ -13,72 +13,44 @@
     }
 }
 
-.flyin,
-.flyout {
-    @include desktop {
-        opacity: 0;
-    }
-}
+$subject: us-history;
 
-.us-history {
-    background-image: url('/images/home/subjects/us-history/background.jpg');
-    background-attachment: fixed;
-    background-position: 20% 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60rem;
-    overflow: hidden;
-    position: relative;
+$book-color: color(blue);
+$now-i-can-color: rgba(color(turquoise), 0.85);
+$now-i-can-width: 56rem;
+$underline-width: 32rem;
+$square-color: rgba(color(blue), 0.15);
+$subject-button-color: color(orange);
+$all-subject-button-color: color(blue);
 
-    @media (min-width: #{breakpoints(tablet) + 1}) {
-        height: 65rem;
+.home-page .book-banners .banner.#{$subject} {
+    background-color: $book-color;
+
+    @include tablet {
+        background-image: url("/images/home/subjects/#{$subject}/background.jpg");
     }
 
-    @include phone {
-        background-color: color(blue);
-        background-image: none;
-        height: 45rem;
+    .diagram {
+        background-image: url('/images/home/subjects/biology/diagram.png');
+        bottom: 6rem;
+        height: 19rem;
+        left: 5rem;
+        width: 27.4rem;
     }
 
-    .container {
-        display: flex;
-        margin: 0 auto;
-        padding: 0 1.5rem;
-        max-width: $boxed-width;
-        flex-flow: column wrap;
-        position: relative;
-        height: 100%;
-
-        @include tablet {
-            flex-flow: row wrap;
-        }
-
-        @include desktop {
-            flex-flow: row wrap;
-        }
+    .leaf {
+        background-image: url('/images/home/subjects/biology/leaf.png');
+        height: 14rem;
+        right: 19rem;
+        top: 24rem;
+        width: 14rem;
     }
 
     .square-1,
     .square-2,
     .square-3,
     .square-4 {
-        background-color: rgba(color(blue), 0.1);
-        display: none;
-        position: absolute;
-        transform: translateZ(0);
-        z-index: 0;
-
-        @include desktop {
-            display: block;
-            animation: flyin 0.5s 1.2s 1 normal ease-in forwards, loop 30s 1.5s normal infinite linear forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
+        background-color: $square-color;
     }
 
     .square-1,
@@ -133,40 +105,10 @@
         top: 20%;
     }
 
-    .sacajawea,
-    .john-adams,
-    .clermont,
-    .book,
-    .student {
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        transform: translateZ(0);
-        z-index: 1;
-    }
-
-    .sacajawea,
-    .john-adams,
-    .clermont {
-        display: none;
-
-        @include desktop {
-            display: block;
-            animation: flyin 0.5s 1.4s 1 normal ease-in forwards, loop 40s 1.8s reverse infinite linear forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
-    }
-
     .sacajawea {
         background-image: url('/images/home/subjects/us-history/sacajawea.png');
         height: 10rem;
-        left: 31rem;
+        left: calc(70% - 53rem);
         position: absolute;
         top: 44%;
         width: 12.4rem;
@@ -191,219 +133,86 @@
     }
 
     .book {
-        background-color: color(blue);
-        background-image: url('/images/subjects/us-history.svg');
-        position: absolute;
-        height: 25rem;
-        left: 0;
-        top: 1.5rem;
-        width: 25rem;
+        background-color: $book-color;
+        background-image: url('/images/subjects/#{$subject}.svg');
+        width: calc(40% + 6rem);
 
         @include tablet {
             top: 5%;
             left: auto;
-            right: 25%;
+            right: calc(30% + 3rem);
             width: 30rem;
             height: 30rem;
-        }
-
-        @media (max-width: 380px) {
-            width: 20rem;
-            height: 20rem;
         }
 
         @media (min-width: #{breakpoints(tablet) + 1}) {
             top: 15%;
         }
-
-        @include desktop {
-            left: 40%;
-            animation: flyin 0.5s 1s 1 normal forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
     }
 
     .student {
-        background-image: url('/images/home/subjects/us-history/student.png');
+        background-image: url('/images/home/subjects/#{$subject}/student.png');
         background-position: 92% 100%;
-        bottom: 15rem;
-        height: 25rem;
-        position: absolute;
-        right: 1.5rem;
-        width: 22rem;
-        z-index: 2;
+        width: calc(30% + 11rem);
+        right: calc(20% - 4rem);
 
         @include tablet {
-            bottom: 0;
-            right: -6rem;
             height: 53rem;
-            width: 45.4rem;
+            right: calc(20% - 10.4rem);
+            width: calc(20vw + 24.9rem);
         }
 
         @include desktop {
-            bottom: 0;
             height: 53rem;
-            right: 15rem;
+            right: calc(15% - 5rem);
             width: 45.4rem;
+        }
+    }
+
+    .align-edge {
+        @include tablet {
+            bottom: 5.5rem;
+            left: calc(20% - 7.4rem);
+        }
+
+        @include desktop {
+            left: 14rem;
         }
     }
 
     .now-i-can {
-        background-color: rgba(color(turquoise), 0.85);
-        bottom: 15rem;
+        background-color: $now-i-can-color;
         color: color(neutral-lightest);
-        display: none;
-        font-size: 3rem;
-        font-weight: 600;
-        height: 8rem;
-        line-height: 2.5rem;
-        right: 15rem;
-        padding: 0;
-        position: absolute;
-        text-align: center;
-        text-transform: none;
-        width: 50rem;
-        z-index: 3;
-
-        @media (min-width:650px) {
-            display: initial;
-        }
-
-        @include desktop {
-            right: auto;
-            left: 10rem;
-            width: 59rem;
-            height: 9rem;
-            font-size: 3.6rem;
-            animation: flyin 0.5s 1.8s 1 normal forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
-
-        .quote {
-            display: inline-block;
-            line-height: 8rem;
-            font-family: 'Permanent Marker', cursive;
-            transform: rotate(-1.2deg) translate(0.75vw, -0.45vw);
-            margin-right: 1rem;
-        }
+        width: $now-i-can-width;
 
         &::after {
-            border-bottom: 0.1rem solid color(neutral-lightest);
-            content: '';
-            right: 4rem;
-            position: absolute;
-            top: 6rem;
-            width: 26rem;
-
-
-            @include desktop {
-                width: 32rem;
-            }
+            width: $underline-width;
         }
     }
 
     .subject-links {
-        bottom: 1.5rem;
-        left: 0;
-        position: absolute;
-        width: 100%;
-        z-index: 3;
-
         @include tablet {
-            width: 27rem;
-            bottom: 6.3rem;
-            left: 5rem;
+            width: 45rem;
+        }
+    }
+
+    .explore-subject {
+        @include tablet {
+            background-color: $subject-button-color;
         }
 
-        @media (min-width:650px) {
-            width: auto;
-            right: 15rem;
-            left: auto;
+        &:hover {
+            background-color: darken($subject-button-color, 5%);
+        }
+    }
+
+    .explore-all {
+        @include tablet {
+            background-color: $all-subject-button-color;
         }
 
-        @include desktop {
-            left: 23.8rem;
-            right: auto;
-            animation: flyin 0.5s 1.8s 1 normal forwards;
-        }
-
-        &.flyout {
-            @include desktop {
-                animation: flyout 0.5s 1 normal forwards;
-                opacity: 1;
-            }
-        }
-
-        ul {
-            list-style-type: none;
-            margin: 0 1.5rem;
-            padding: 0;
-
-            @include tablet {
-                margin: 0;
-            }
-
-
-            li {
-                display: inline-block;
-                width: 100%;
-
-                @include tablet {
-                    width: auto;
-                }
-            }
-        }
-
-        .btn {
-            font-size: 1.6rem;
-            line-height: 6rem;
-            height: 6rem;
-            padding: 0 1.5rem;
-            width: 100%;
-            display: inline-block;
-
-            @include desktop {
-                width: auto;
-            }
-        }
-
-        .explore-subject {
-            margin-bottom: 1.5rem;
-
-            @include tablet {
-                margin-right: 1rem;
-            }
-
-            @include phone {
-                background-color: color(yellow);
-
-                &:hover {
-                    background-color: darken(color(yellow), 5%);
-                }
-            }
-        }
-
-        .explore-all {
-
-            @include phone {
-                background-color: color(turquoise);
-
-                &:hover {
-                    background-color: darken(color(turquoise), 5%);
-                }
-            }
+        &:hover {
+            background-color: darken($all-subject-button-color, 5%);
         }
     }
 }
