--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,6 +1,18 @@
 @import 'variables';
 @import 'mixins';
 
+@mixin tablet {
+    @media (min-width: #{breakpoints(phone) + 1}) {
+        @content;
+    }
+}
+
+@mixin desktop-plus {
+    @media (min-width: 1025px) {
+        @content;
+    }
+}
+
 .home-page {
     background-color: lighten(color(neutral-lighter), 8%);
     flex: 1 0 auto;
@@ -41,7 +53,237 @@
                 z-index: 1;
             }
         }
-    }
+
+        .flyin,
+        .flyout {
+            @include desktop-plus {
+                opacity: 0;
+            }
+        }
+
+        .banner {
+            background-attachment: fixed;
+            background-position: 20% 0;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 60rem;
+            overflow: hidden;
+            position: relative;
+
+            @media (min-width: #{breakpoints(tablet) + 1}) {
+                height: 65rem;
+            }
+
+            @include phone {
+                background-image: none;
+                height: 45rem;
+            }
+
+            .container {
+                display: flex;
+                margin: 0 auto;
+                padding: 0 1.5rem;
+                max-width: $boxed-width;
+                flex-flow: column wrap;
+                position: relative;
+                height: 100%;
+
+                @include tablet {
+                    flex-flow: row wrap;
+                }
+
+                @include desktop-plus {
+                    flex-flow: row wrap;
+                }
+            }
+
+            .square-1,
+            .square-2,
+            .square-3,
+            .square-4 {
+                display: none;
+                position: absolute;
+                transform: translateZ(0);
+                z-index: 0;
+
+                @include desktop-plus {
+                    display: block;
+                    animation: flyin 0.5s 1.2s 1 normal ease-in forwards, loop 30s 1.5s normal infinite linear forwards;
+                }
+
+                &.flyout {
+                    @include desktop-plus {
+                        animation: flyout 0.5s 1 normal forwards;
+                        opacity: 1;
+                    }
+                }
+            }
+
+            .feature,
+            .book,
+            .student {
+                background-repeat: no-repeat;
+                background-size: contain;
+                position: absolute;
+                transform: translateZ(0);
+                z-index: 1;
+            }
+
+            .feature {
+                display: none;
+
+                @include desktop-plus {
+                    display: block;
+                    animation: flyin 0.5s 1.4s 1 normal ease-in forwards, loop 40s 1.8s reverse infinite linear forwards;
+                }
+
+                &.flyout {
+                    @include desktop-plus {
+                        animation: flyout 0.5s 1 normal forwards;
+                        opacity: 1;
+                    }
+                }
+            }
+
+            .book {
+                background-position: top left;
+                top: 1.5rem;
+                left: 0;
+                width: calc(30vw + 15rem);
+                height: calc(30vw + 15rem);
+
+                @include desktop-plus {
+                    animation: flyin 0.5s 1s 1 normal forwards;
+                }
+
+                &.flyout {
+                    @include desktop-plus {
+                        animation: flyout 0.5s 1 normal forwards;
+                        opacity: 1;
+                    }
+                }
+            }
+
+            .student {
+                background-position: center bottom;
+                bottom: 15rem;
+                height: 60%; // Bounds height; use width in individual pages to control size
+                z-index: 2;
+
+                @include tablet {
+                    bottom: 0;
+                }
+
+                @include desktop-plus {
+                    bottom: 0;
+                }
+            }
+
+            .align-edge {
+                bottom: 1.5rem;
+                display: inline-flex;
+                flex-direction: column;
+                position: absolute;
+                width: calc(100% - 3rem);
+
+                @include tablet {
+                    width: auto;
+                }
+
+                &.right {
+                    align-items: flex-end;
+                }
+            }
+
+            .now-i-can {
+                display: none;
+
+                @media (min-width: 650px) {
+                    display: initial;
+                    font-size: 3.6rem;
+                    font-weight: 500;
+                    height: 2.5em;
+                    line-height: 2.5;
+                    margin-bottom: 1.5rem;
+                    padding: 0;
+                    text-align: center;
+                    text-transform: none;
+                    z-index: 3;
+                }
+
+                @include desktop-plus {
+                    animation: flyin 0.5s 1.8s 1 normal forwards;
+                }
+
+                &.flyout {
+                    @include desktop-plus {
+                        animation: flyout 0.5s 1 normal forwards;
+                        opacity: 1;
+                    }
+                }
+
+                .quote {
+                    display: inline-block;
+                    font-family: 'Permanent Marker', cursive;
+                    transform: rotate(-0.9deg) translate(0.25em, -0.1em);
+                }
+
+                &::after {
+                    border-bottom: 0.1rem solid color(neutral-lightest);
+                    content: '';
+                    right: 1.5rem;
+                    position: absolute;
+                    top: 1.8em;
+                }
+            }
+
+            .subject-links {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 100%;
+                z-index: 3;
+
+                @media (min-width: 500px){
+                    flex-direction: row;
+                    min-width: 47rem;
+                }
+
+                @include desktop-plus {
+                    animation: flyin 0.5s 1.8s 1 normal forwards;
+                    left: 15.6rem;
+
+                    &.flyout {
+                        animation: flyout 0.5s 1 normal forwards;
+                        opacity: 1;
+                    }
+                }
+
+                .btn {
+                    color: color(neutral-lightest);
+                    font-size: 1.6rem;
+                    height: 6rem;
+                    line-height: 6rem;
+                    padding: 0 1.5rem;
+                    width: 100%;
+
+                    @media (min-width: 500px) {
+                        flex-basis: 12em;
+                        flex-grow: 1;
+                    }
+
+                    @include desktop-plus {
+                        width: auto;
+                    }
+                }
+
+                .explore-subject {
+                    margin-bottom: 1.5rem;
+                    margin-right: 1.5rem;
+                }
+            }
+        } // .banner
+    } // .book-banners
 
     .buckets {
         display: flex;
